--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.1.0
+  curved_navigation_bar: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
