--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   curved_navigation_bar: ^1.0.1
   motion_tab_bar_v2: ^0.2.4
+  animate_do: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.6.0
+  #lint: ^1.6.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
