--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: awesonestyle
 description: AwesoneStyle widget pack.
-version: 0.0.1
+version: 1.1.0
 homepage: https://github.com/STkirito/AwesoneStyle
 
 environment:
@@ -16,6 +16,8 @@ dependencies:
   animate_do: ^2.1.0
   get: 4.6.1
   connectivity_plus: ^2.0.3
+  http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
