--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  animate_do: 2.1.0
+  animate_do: ^2.1.0
   connectivity_plus: ^2.0.3
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.1.0
-  get: 4.6.5
-  calendar_view: 0.0.5
+  get: ^4.6.5
+  calendar_view: ^0.0.5
   http: ^0.13.4
   intl: ^0.17.0
 dev_dependencies:
