--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   dartdoc: ^5.1.2
+  path: ^1.8.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
