--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,26 @@
 name: awesonestyle
 description: "AwesoneStyle es un paquete multiplataforma que contiene un conjunto de herramientas para diseño de sitios, aplicaciones web, aplicaciones móviles y de escritorio."
-version: 1.3.8+1
+version: 1.3.9
 homepage: https://github.com/STkirito/awesoneStyle
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
-  flutter: ">=2.17.0"
+  sdk: '>=2.19.0 <3.0.0'
+  flutter: ">=3.7.0"
 
 dependencies:
-  animate_do: ^2.1.0
-  connectivity_plus: ^2.0.3
+  
+  animate_do: ^3.0.2
+  connectivity_plus: ^3.0.2
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.1.0
   get: ^4.6.5
-  calendar_view: ^0.0.5
   http: ^0.13.4
-  intl: ^0.17.0
-  dartdoc: ^5.1.2
+  intl: ^0.18.0
+  dartdoc: ^6.1.5
   path: ^1.8.3
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
