--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: awesonestyle
 description: "AwesoneStyle es un paquete multiplataforma que contiene un conjunto de herramientas para diseño de sitios, aplicaciones web, aplicaciones móviles y de escritorio."
-version: 1.3.9+2
+version: 2.0.0
 homepage: https://github.com/STkirito/awesoneStyle
 
 environment:
@@ -8,18 +8,13 @@ environment:
   flutter: ">=3.7.0"
 
 dependencies:
-  
-  animate_do: ^3.0.2
-  connectivity_plus: ^3.0.2
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^10.1.0
-  get: ^4.6.5
-  http: ^0.13.4
-  intl: ^0.17.0
-  path: ^1.8.2
+  
 dev_dependencies:
   dartdoc: ^6.1.5
+  intl: ^0.17.0
+  path: ^1.8.2
   flutter_test:
     sdk: flutter
 # For information on the generic Dart part of this file, see the
